# Obsidian_enhanced_V2

./: .env_exemplo  README.md  main.py  pyproject.toml  requirements.txt  tools.py
utils/: audio.py  cria_partes_notas.py  download_youtube.py  image.py  whatsapp_listener.py
